# Cat_db

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-web.sh
cats/: admin.py  views.py
cats/models/: breed.py  cats.py
cats/serializers/: breed_serializer.py  cat_serializer.py
cats/tests/: tests_breed.py  tests_cats.py
common/: settings.py
config/: settings.py  urls.py
docs/: breeds.md  cats.md  installation.md  users.md
filters/: breed_filter.py
fixtures/: breed.json  cats.json  users.json
users/: admin.py  serializers.py  tests.py  urls.py  views.py
users/models/: managers.py  users.py
